--- a/assets/style.css
+++ b/assets/style.css
@@ -156,7 +156,8 @@ footer{
 }
 @media only screen and (max-width: 1160px){
 body{
-  padding: 2%;
+  padding: 0%;
+  margin: 0%;
 }
 .top-Section{
   padding:0px;
@@ -175,5 +176,7 @@ body{
 .one-box {
   margin-bottom: 0px
 }
-
+.two-box{
+  padding:20px
+}
 }
