--- a/assets/style.css
+++ b/assets/style.css
@@ -4,17 +4,21 @@ body{
 header {
   text-align: center;
   font-family:"Lato", sans-serif;
-  border-bottom: solid;
-  border-color: #005282;
-  border-width: thick;
   font-size: 1em;
 
-
+}
+hr {
+  background-color: #005282;
+  border-color: #005282;
+  border-width: 2px;
+  margin-left: 20%;
+  margin-right: 20%;
+  border-style: solid;
 }
 .top-Section{
   text-align: center;
   font-family:"Lato", sans-serif;
-  padding: 20px 330px 20px 330px;
+  padding: 20px 220px 20px 220px;
 }
 .top-Section h1{
   font-size: 1.5em;
@@ -190,12 +194,12 @@ body{
   width: 15pc;
 }
 .arrowDown{
-margin-left:37%;
+margin-left:34%;
 }
 .pinkSection{
   font-size: 1em;
 }
 #warningSymbol{
-  max-width: 5pc;
+  max-width: 3%;
 }
 }
