--- a/assets/style.css
+++ b/assets/style.css
@@ -171,6 +171,7 @@ body{
   flex-direction: column;
   margin: 0px;
   padding:0px;
+  margin-bottom: -55px;
 }
 .pinkSection{
   margin-top: 0px;
@@ -186,6 +187,7 @@ body{
   margin-bottom: 0px;
   padding:0px;
   margin-right: 0px;
+  padding-top: 20px;
 }
 .two-box{
   padding:20px
@@ -198,6 +200,11 @@ margin-left:34%;
 }
 .pinkSection{
   font-size: 1em;
+
+}
+#calendarPic{
+  margin-left: 40%;
+
 }
 #warningSymbol{
   max-width: 3%;
