--- a/assets/style.css
+++ b/assets/style.css
@@ -26,7 +26,10 @@ hr {
 
 .firstButton {
   display: flex;
+  align-items: center;
   justify-content: center;
+  flex-direction: column;
+
 }
 .webinarButton {
   display: flex;
