--- a/assets/style.css
+++ b/assets/style.css
@@ -204,7 +204,8 @@ body {
   padding-top: 20px;
 }
 .two-box {
-  padding:20px
+  padding:20px;
+
 }
 .three-box img {
   width: 15pc;
@@ -216,6 +217,7 @@ margin-left:32%;
   font-size: 1em;
   margin: 0px;
   padding: -5px;
+  margin-bottom: 0px;
 }
 
 #calendarPic {
